you/force-app/main/default/objects/SeriePagamentos__c/fields/TabelaVenda__c.field-meta.xml
<CustomField>
    <fullName>TabelaVenda__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tabela de Venda</label>
    <referenceTo>TabelaVendas__c</referenceTo>
    <relationshipLabel>Series de Pagamentos</relationshipLabel>
    <relationshipName>SeriesPagamentos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>