you/force-app/main/default/objects/SeriePagamentos__c/fields/TipoCondicao__c.field-meta.xml
<CustomField>
    <fullName>TipoCondicao__c</fullName>
    <label>Tipo de Condição</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TiposCondicoes</valueSetName>
    </valueSet>
</CustomField>